--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     width: 100%;
     height: 100vh;
     color: #222222;
-    overflow-x: hidden;
+    overflow-x: unset;
 }
 
 /* HEADER */
@@ -474,7 +474,7 @@ footer hr{
         height: 450px;
     }
     #final .final-1 .mapa iframe{
-        max-width: 455px;
+        max-width: 300px;
         height: 300px;
         margin-bottom: 30px;
     }
@@ -492,7 +492,9 @@ footer hr{
 }
 @media screen and (max-width: 580px){
     #sec1 .texto-1{
-        max-width: 400px;
+        max-width: 100%;
+        margin-left: 5px;
+        margin-right: 5px;
     }
     #sec1 .p-texto{
         font-size: 50px;
@@ -501,7 +503,9 @@ footer hr{
         font-size: 50px;
     }
     #sec3 .text-card{
-        max-width: 350px;
+        max-width: 100%;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 
     .all-cards{
