--- a/css/matricula.css
+++ b/css/matricula.css
@@ -50,6 +50,9 @@ header .nav-list{
     padding-top: 18px;
     color: #222222;
 }
+header a{
+    color: #222222;
+}
 
 header .nav-title h2 a:visited{
     color: #8979F2;
